--- a/arquivoAulaLogicaJS.html
+++ b/arquivoAulaLogicaJS.html
@@ -11,8 +11,11 @@
 
     <script>
 
-        /*
-            */
+        /* Pedir para o usuário digitar dois números que
+         representam os lados de um retangulo. Mostrar
+        na tela a área total de duas formas: Num alert ou na
+        div#output (dependendo do botão clicado). Esse código 
+        não precisa ser executado quando a página é aberta. */
 
 
 
